--- a/index.html
+++ b/index.html
@@ -5,8 +5,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
-    <h1>Hello World!</h1>
+<body  >
+    <header id="header">
+        <div class="logo">
+            <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" ,
+                alt="our logo" />
+        </div>
+        <nav id="nav-bar">
+            <nav>
+                <ul>
+                    <li><a class="nav-link" href="#features">Features</a></li>
+                    <li><a class="nav-link" href="#how-it-works">How it works</a></li>
+                    <li><a class="nav-link" href="#pricing">Pricing</a></li>
+                </ul>
+            </nav>
+        </nav>
+    </header>
+    <div>
+        <section id="hero"><h2>Handcrafted, home-made masterpieces</h2>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <input name="email" id="email" type="email" placeholder="Enter your email" required/>
+          <input id="submit" type="submit" value="Get started" class="btn">
+        </form>
+        </section>
+        <div  class="container" >
+           <section id="features">
+            <div class="grid">
+                <div class="icon">
+                    <i class="fa fa-fire fa-3x"></i>
+                </div>
+                <div class="desc">
+                    <h2>Premium Materials</h2>
+                    <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your
+                        purchase</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="icon">
+                    <i class="fa fa-3x fa-truck"></i>
+                </div>
+                <div class="desc">
+                    <h2>Fast Shipping</h2>
+                    <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns
+                        if you are
+                        not satisfied.</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="icon">
+                    <i class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
+                </div>
+                <div class="desc">
+                    <h3>Quality Assurance</h3>
+                    <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the
+                        pitch of your
+                        instrument.</p>
+                </div>
+            </div>
+           </section>
+            <section id="how-it-works">
+            <iframe id="video" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+            </section>
+            <section id="pricing">
+                <div class="product" id="tenor">
+                    <div class="level">TENOR TROMBONE</div>
+                    <h2>$600</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A vero recusandae, consectetur dignissimos inventore
+                        itaque sit minima nobis sapiente aliquid atque eligendi officiis debitis similique praesentium, optio veniam
+                        veritatis magni.</p>
+                    <button class="btn">Select</button>
+                </div>
+                <div class="product" id="bass">
+                    <div class="level">BASS TROMBONE</div>
+                    <h2>$900</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A vero recusandae, consectetur dignissimos inventore
+                        itaque sit minima nobis sapiente aliquid atque eligendi officiis debitis similique praesentium, optio veniam
+                        veritatis magni.</p>
+                    <button class="btn">Select</button>
+                </div>
+                <div class="product" id="valve" >
+                    <div class="level">VALVE TROMBONE</div>
+                    <h2>$1200</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A vero recusandae, consectetur dignissimos inventore
+                        itaque sit minima nobis sapiente aliquid atque eligendi officiis debitis similique praesentium, optio veniam
+                        veritatis magni.</p>
+                    <button class="btn">Select</button>
+                </div>
+            </section>
+        </div>
+        
+    </div>
+    <footer>
+      <ul>
+        <li>
+            <a href="#">Privacy</a>
+        </li>
+        <li>
+            <a href="#">Terms & conditions</a>
+        </li>
+        <li>
+            <a href="#">Contact</a>
+        </li>
+      </ul>
+      <span>&copy; 2023 developed by Mavine and Cristoper. All rights reserved.</span>
+    </footer>
 </body>
 </html>
